fix: Overflowed content

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -4,4 +4,5 @@
   width: $panelWidthNarrow;
   height: 640px;
   text-align: center;
+  margin-top: 80px;
 }
